welcome.lessons.welcome.loopdowhile.Poucet2.scala.error
Poucet:6: error: not found: value nbBuggle
    nbBuggle=nbBuggle+1
    ^Poucet:13: error: reassignment to val
  nbPas=nbPas+1
       ^